Reduce UserListQuery memory usage
Closes #46140

Signed-off-by: Pedro Ruivo <1492066+pruivo@users.noreply.github.com>